--- a/bin/dune
+++ b/bin/dune
@@ -1,5 +1,3 @@
 (executable
  (name main)
- (libraries tokenizers core_unix.command_unix)
- (preprocess
-  (pps ppx_jane)))
+ (libraries tokenizers))
