--- a/tokenizers.opam
+++ b/tokenizers.opam
@@ -10,18 +10,10 @@ build: ["dune" "build" "-p" name "-j" jobs]
 depends: [
     "ocaml"
     "dune"
-    "batteries"
+    "core"
     "yojson"
-    "re"
-    "algos"
-    # Dev Dependencies
-    #
-    # I'm using with-test for dev dependencies as the with-dev-setup option
-    # is only available in opam 2.2.0, which is in alpha
-    "ocaml-lsp-server" { with-test }
-    "ocamlformat" { with-test }
-    "utop" { with-test }
-]
-pin-depends: [
-    [ "algos.dev" "git+https://github.com/jaymody/ocaml-algos.git" ]
+    "ppx_jane"
+    "ocaml-lsp-server" { with-dev-setup }
+    "ocamlformat" { with-dev-setup }
+    "utop" { with-dev-setup }
 ]
